Fix comment threading text in dark mode

--- a/themes/red/assets/css/site.css
+++ b/themes/red/assets/css/site.css
@@ -152,6 +152,10 @@ body {
     .external-link {
         filter: invert(100%);
     }
+
+    .isso-thread-heading {
+        color: #fbeded;
+    }
 }
 
 a:link {
